# ps_eu_te_amo

./: ,env  .gitignore  dados_atuais.json  db.sqlite3  main.py  manage.py  pyproject.toml
.github/workflows/: deploy.yaml
core/: forms.py  models.py  tasks.py  urls.py  view_checkout.py  views.py  views_utils.py
core/migrations/: 0001_initial.py  0002_perfil_foto.py  0003_servicoextra.py  0004_perfil_stripe_customer_id_and_more.py
core/templates/core/: base.html  cadastro.html  check_out.html  configurar_perfil.html  confirmado.html  dashboard.html  destinatario_form.html  editar_destinatario.html  editar_mensagem.html  editar_menssagem.html  index.html  login.html  mensagem.form  mensagem_form.html  mensagens_lista.html  renovacao.html  servicos_lista.html  teste.html
core/templates/core/main_sections/: about.html  faq.html  hero.html  howitworks.html  plans.html
core/templates/core/partials/: servicos_fragmento.html  tabela_destinatarios.html  tabela_mensagens_fragmento.html
ps_eu_te_amo/: asgi.py  settings.py  urls.py  wsgi.py
static/css/: dash.css  main.css  style.css
static/css/abstracts/: _variables.css
static/css/base/: _reset.css  _typography.css
static/css/components/: _button.css  _card.css
static/css/layout/: _grid.css
static/js/: script.js
