[project]
name = "ps-eu-te-amo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "celery>=5.6.3",
    "django>=5.2.13",
    "django-environ>=0.13.0",
    "mysqlclient>=2.2.8",
    "pillow>=12.2.0",
    "redis>=7.4.0",
]
