[project]
name = "ps-eu-te-amo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "celery>=5.6.3",
    "django>=5.2.13",
    "django-environ>=0.13.0",
    "gunicorn>=26.0.0",
    "mysqlclient>=2.2.8",
    "pillow>=12.2.0",
    "psycopg2-binary>=2.9.12",
    "pymysql>=1.2.0",
    "python-dotenv>=1.2.2",
    "redis>=7.4.0",
    "stripe>=15.1.0",
]
